<resources>
    <string name="app_name">ATA POS</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_people">People</string>
    <string name="title_report">Report</string>
    <string name="title_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_your_products">Manage Your Products</string>
    <string name="products">products</string>
    <string name="categories">categories</string>
    <string name="brands">Brands</string>
    <string name="modifiers">modifiers</string>
    <string name="title_category_list">Categories</string>
    <string name="title_category_detail">Category Detail</string>
    <string name="save">Save</string>
    <string name="my_categories">Categories</string>
    <string name="my_clients">Clients</string>
    <string name="title_add">add</string>
    <string name="new_category">New Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete">Delete</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="category_name">Category Name</string>
    <string name="manage_your_people">Manage Account</string>
    <string name="suppliers">Suppliers</string>
    <string name="clients">Clients</string>
    <string name="user_accounts">User Accounts</string>
    <string name="all_clients">All Clients</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="new_client">New Client</string>
    <string name="edit_client">Edit Client</string>
    <string name="medium_lorem_ipsum">medium lorem ipsum</string>
    <string name="company">Company Info</string>
    <string name="variants">Variants</string>
    <string name="combo">Combo</string>
    <string name="version_id">1.0</string>
    <string name="version">Version</string>
    <string name="company_name">Atalou Microsystem Inc.</string>
    <string name="company_address">3265 Hinkle Deegan Lake Road, Dundee New York, United State</string>
    <string name="other_setting">Other Setting</string>
    <string name="general_setting">General Setting</string>
    <string name="all_categories">All categories</string>
    <string name="all_customers">My Customers</string>
    <string name="all_taxes">My Taxes</string>
    <string name="rate">Rate %</string>
    <string name="new_tax">New Tax</string>
    <string name="edit_tax">Edit Tax</string>
    <string name="new_customer_group">Add Customer Group</string>
    <string name="edit_customer_group">Edit Customer Group</string>
    <string name="customer_group">Customer Groups</string>
    <string name="my_users">My users</string>
    <string name="new_user">New user</string>
    <string name="edit_user">Edit user</string>
    <string name="username">Username</string>
    <string name="role">Role</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>
